--- a/nav2_mppi_controller/CMakeLists.txt
+++ b/nav2_mppi_controller/CMakeLists.txt
@@ -86,6 +86,7 @@ add_library(mppi_critics SHARED
   src/critics/path_follow_critic.cpp
   src/critics/path_angle_critic.cpp
   src/critics/prefer_forward_critic.cpp
+  src/critics/prefer_right_critic.cpp
   src/critics/twirling_critic.cpp
   src/critics/constraint_critic.cpp
 )
